--- a/src/app/modules/pages/magic-without-tricks/magic-without-tricks.component.html
+++ b/src/app/modules/pages/magic-without-tricks/magic-without-tricks.component.html
@@ -1,10 +1,16 @@
 <div class="container mx-auto p-4">
   <h2 class="text-2xl font-bold mb-4">LIST DATA: RICK AND MORTY API</h2>
-  <div class="mb-4">
+  <div class="mb-4 space-x-4">
       <button
-          (click)="exportToExcel()"
-          class="bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600 transition duration-200">
-          Exportar a Excel
+            (click)="exportToExcel()"
+            class="bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600 transition duration-200">
+            Exportar a Excel V1
+      </button>
+      <button
+            disabled
+            (click)="exportToExcel2()"
+            class="bg-blue-500 text-white font-semibold py-2 px-4 rounded hover:bg-blue-600 transition duration-200">
+            Exportar a Excel V2
       </button>
   </div>
   <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-md overflow-hidden">
@@ -14,6 +20,7 @@
               <th class="py-3 px-4 text-left">Name</th>
               <th class="py-3 px-4 text-left">Status</th>
               <th class="py-3 px-4 text-left">Species</th>
+              <th class="py-3 px-4 text-left">Date</th>
           </tr>
       </thead>
       <tbody>
@@ -22,6 +29,7 @@
               <td class="px-4 border-b border-gray-200">{{ item.name }}</td>
               <td class="px-4 border-b border-gray-200">{{ item.status }}</td>
               <td class="px-4 border-b border-gray-200">{{ item.species }}</td>
+              <td class="px-4 border-b border-gray-200">{{ date | date: 'dd MM yyyy' }}</td>
           </tr>
       </tbody>
   </table>
